﻿更新履歴

==== Unreleased
 * FIX: リプライ制限されたツイートがリストのタイムラインに含まれているとエラーになる不具合を修正

==== Ver 3.6.0(2023/07/05)
 * NEW: Cookie使用時にgraphqlエンドポイントを使用したリストのタイムライン取得に対応
 * FIX: 「このタブの発言をクリア」で参照されなくなった発言分のメモリが開放されない場合がある不具合を修正

==== Ver 3.5.0(2023/06/16)
 * CHG: アカウント追加時にOpenTweenのAPIキーによる認可を選択肢に追加
 * CHG: 非対応のOSを使用している場合に起動時に警告を表示する
 * FIX: 削除したタブの取消時に同名のタブが存在した場合のエラーが適切に処理されない不具合を修正
 * FIX: 発言一覧のアイコン画像の取得に失敗した場合のエラーが適切に処理されない不具合を修正
 * FIX: Cookieを使用する場合にUserTimelineで99件を超えて取得するとエラーが返る問題の回避策を追加

==== Ver 3.4.0(2023/01/29)
 * NEW: 複数枚の画像を添付する際に画像の削除や順序の変更ができるようになりました
 * FIX: APIアクセス方式の選択画面でのタブオーダーの誤りを修正

==== Ver 3.3.0(2023/01/22)
 * NEW: アカウント追加時にAPIキーを指定可能になりました
 * CHG: API v2 の使用を設定状態に関わらず無効化しました
 * FIX: 同一の画像を複数枚添付する時にプレビュー画像の表示がエラーになる不具合を修正

==== Ver 3.2.0(2023/01/20)
 * NEW: 複数枚の画像を添付する際にリスト上で画像を確認できるようになりました
 * CHG: アカウント追加時の認可関連のエラーメッセージがより詳細になるように変更

==== Ver 3.1.0(2023/01/14)
 * NEW: 引用ツイートを Ctrl+Shift+L で実行するショートカットを追加 (thx @WizardOfPSG!)
 * CHG: 発言一覧のフォントサイズがアイコンより大きい場合は項目の高さをフォントサイズに合わせるように変更
 * CHG: クリップボードからの画像添付時に表示していた確認ダイアログを廃止
 * FIX: 発言一覧のソート順が日付の昇順となっている場合にタブ切替時にスクロール位置が保持されない不具合を修正

==== Ver 3.0.0(2023/01/11)
 * OpenTween v3.0.0 からは .NET Framework 4.8 以上が必須になります
  - .NET Framework 4.8 ランタイムは https://dotnet.microsoft.com/ja-jp/download/dotnet-framework/net48 から入手できます
  - Windows 10 21H1 以降には標準で .NET Framework 4.8 が含まれているため追加のインストールは不要です
 * このバージョン以降の OpenTween では Windows 8.1 以下向けの対応は行いません

 * CHG: ターゲットフレームワークを .NET Framework 4.8 に変更

==== Ver 2.8.0(2023/01/11)
 * NEW: サムネイル画像のコンテキストメニューに「画像をコピー」を追加 (thx @kzlogos!)
 * NEW: Segoe UI Emoji によるカラー絵文字の描画に対応（発言詳細欄のみ）
 * CHG: Twemojiの画像の取得元をMaxCDNからCloudflareに移行 (thx @sou_niyari!)

==== Ver 2.7.1(2022/09/03)
 * FIX: 発言一覧の選択位置を移動した際にデッドロックが発生する場合がある不具合を修正 (thx @Kazuki_Ashiya!)
 * FIX: 発言本文の翻訳時に発生したエラーが適切に処理されない不具合を修正

==== Ver 2.7.0(2022/07/30)
 * NEW: 発言詳細部の日時ラベルをクリックするとWebブラウザを起動してツイートを表示する機能を追加
 * NEW: 設定画面に「Twitter API v2 の使用を有効にする」のチェックボックスを追加
   - デフォルトで API v2 が有効となり、通常は変更する必要はありません