@@ -1,6 +1,7 @@
 ﻿更新履歴
 
 ==== Unreleased
+ * CHG: graphqlエンドポイントからのレスポンスの読み込み失敗時に問題の起きたツイートをErrorLogsに書き出す機能を追加
  * FIX: リプライ制限されたツイートがリストのタイムラインに含まれているとエラーになる不具合を修正
 
 ==== Ver 3.6.0(2023/07/05)
